# IA-learning

./: ia-introduction.md
lab1/: README.md  pyproject.toml
lab1/lab1_files/: 125442-55f2506dd6fb3887.js  221272-41b56713b98ede34.js  230938-8240ab1fe66ae34d.js  244725-02da3fbb704de724.js  388212-49c2ebeb9747d94d.js  4529-9a0dd5c8812a5d37.js  535050-70b21df4c7bd941e.js  539840-0c431662dfa91abb.js  732053-88edf1a533d187ab.js  75355-677c48c3ca18dbb8.js  758598-44bfa225501d2736.js  935727-0d21763be4a6eb47.js  965174-476d79befabe8064.js  972094-52f2f86a981d94e4.js  972098-f44078f35f3e6aef.js  976345-57a35fc29ad52921.js  batched-remoteEntry-b8174b164b880ae5a487.js  floodgate.en.bundle.js  griffel-9dda19a91f724764.css  integrities-65383ed0bbf1287ef502.js  livepersonacard_with-react_5a313e147961dbf6e201.js  livepersonacardstrings_647901316aa9d98af79c02c80c0773b1d31f73.js  main-35c3681699072703.js  runtime-e9621a020e363b2c.js
lab2/: README.md  final_project.ipynb  lab2.ipynb  pyproject.toml
